--- a/src/pug/components/pedalbox/_working.pug
+++ b/src/pug/components/pedalbox/_working.pug
@@ -34,13 +34,48 @@ section#working.working
               +swiper('swiper-container--working', 'swiperWorkingContent', true, true, false)
 
           .working__box
-            img.working__box-img(src="./img/img-item-working.png" srcset="./img/img-item-working@2x.png 2x" alt="" title="")
+            img.working__box-img(src="./img/img-item-working.png" alt="" title="")
+            img.working__box-img.working__box-img--0(
+              working-image-js
+              data-img="0" src="./img/img-item-working-0.png" alt="" title=""
+            )
+            img.working__box-img.working__box-img--1(
+              working-image-js
+              data-img="1" src="./img/img-item-working-1.png" alt="" title=""
+            )
+            img.working__box-img.working__box-img--2(
+              working-image-js
+              data-img="2" src="./img/img-item-working-2.png" alt="" title=""
+            )
 
-            p.working__box-title!= "Sport+ <span>(zmienia kolor diody na kolor czerwony)</span>"
+            .working__box-title(
+              working-title-js
+              data-num="0" data-name="Sport+" data-desc="(zmienia kolor diody na kolor czerwony)"
+            )!= "<span working-btnName-js>Sport+</span> <span class='working__box-title--desc' working-btnDesc-js>(zmienia kolor diody na kolor czerwony)</span>"
 
-            p.working__box-subtitle!= "Sport"
-            p.working__box-subtitle!= "City"
-            p.working__box-subtitle.working__box-subtitle--pb!= "Off"
+            a.working__box-subtitle(
+              href="#"
+              working-btn-js
+              data-num="1"
+              data-name="Sport"
+              data-desc="(zmienia kolor diody na kolor pomarańczowy)"
+            )!= "Sport"
+
+            a.working__box-subtitle(
+              href="#"
+              working-btn-js
+              data-num="2"
+              data-name="City"
+              data-desc="(zmienia kolor diody na kolor zielony)"
+            ).working__box-subtitle!= "City"
+
+            a.working__box-subtitle.working__box-subtitle--pb(
+              href="#"
+              working-btn-js
+              data-num="3"
+              data-name="Off"
+              data-desc="(wyłącza diodę)"
+            )!= "Off"
 
             p.working__box-description!= "Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł."
 
@@ -68,7 +103,25 @@ section#working.working
 
 
         .working__col-right
-          img(src="./img/img-graph-working.png" srcset="./img/img-graph-working@2x.png 2x" alt="" title="")
+          .working__graph
+
+            img.working__graph-img(src="./img/img-graph-working.png" alt="" title="")
+            img.working__graph-img.working__graph-img--0(
+              working-graph-js
+              src="./img/img-graph-working-0.png" alt="" title=""
+            )
+            img.working__graph-img.working__graph-img--1(
+              working-graph-js
+              src="./img/img-graph-working-1.png" alt="" title=""
+            )
+            img.working__graph-img.working__graph-img--2(
+              working-graph-js
+              src="./img/img-graph-working-2.png" alt="" title=""
+            )
+            img.working__graph-img.working__graph-img--3(
+              working-graph-js
+              src="./img/img-graph-working-3.png" alt="" title=""
+            )
 
           p!= "<span>Oś pionowa</span> to otwarcie przepustnicy, zaś <span>oś pozioma</span> pokazuje, <br>jak mocno wciśnięty jest pedał gazu."
 
