--- a/src/pug/components/pedalbox/_working.pug
+++ b/src/pug/components/pedalbox/_working.pug
@@ -20,16 +20,29 @@ section#working.working
 
           .working__mobile
             .working__box
-              p.working__box-title!= "Sport+<span>(zmienia kolor diody na kolor czerwony)</span>"
-              p.working__box-description!= "Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł."
+
 
               mixin swiperWorkingContent()
-                .swiper-slide
-                  img(src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title="")
-                .swiper-slide
-                  img(src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title="")
-                .swiper-slide
-                  img(src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title="")
+                .swiper-slide(data-slide-id='0')
+                  p.working__box-title!= "Sport+<span class='working__box-title--desc'>(zmienia kolor diody na kolor czerwony)</span>"
+                  p.working__box-description!= "Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł."
+
+                  img(src="./img/img-pedalbox-slider-0.png" srcset="./img/img-pedalbox-slider-0@2x.png 2x" alt="" title="")
+                .swiper-slide(data-slide-id='1')
+                  p.working__box-title!= "Sport<span class='working__box-title--desc'>(zmienia kolor diody na kolor pomarańczowy)</span>"
+                  p.working__box-description!= "W trybie Sport reakcja pedału gazu jest zwiększona do 16%, co powoduje, że jest to tryb mający zastosowanie w większości sytuacji drogowych. Idealny do codziennej jazdy."
+
+                  img(src="./img/img-pedalbox-slider-1.png" srcset="./img/img-pedalbox-slider-1@2x.png 2x" alt="" title="")
+                .swiper-slide(data-slide-id='2')
+                  p.working__box-title!= "City<span class='working__box-title--desc'>(zmienia kolor diody na kolor zielony)</span>"
+                  p.working__box-description!= "City pozwala cieszyć się szybszą reakcją pedału gazu w miejskim zgiełku. Jest to tryb słabszy od Sport, ale za to bardzo przewidywalny i komfortowy."
+
+                  img(src="./img/img-pedalbox-slider-2.png" srcset="./img/img-pedalbox-slider-2@2x.png 2x" alt="" title="")
+                .swiper-slide(data-slide-id='3')
+                  p.working__box-title!= "Off<span class='working__box-title--desc'>(wyłącza diodę)</span>"
+                  p.working__box-description!= "Ostatni tryb powoduje wyłączenie PedalBoxa z obwodu pedału gazu. Wtedy pedał gazu działa w stu procentach fabrycznie, bo PedalBox nie modyfikuje jego wartości."
+
+                  img(src="./img/img-pedalbox-slider-3.png" srcset="./img/img-pedalbox-slider-3@2x.png 2x" alt="" title="")
 
               +swiper('swiper-container--working', 'swiperWorkingContent', true, true, false)
 
