--- a/src/scss/_components/pedalbox/_working.scss
+++ b/src/scss/_components/pedalbox/_working.scss
@@ -306,6 +306,9 @@
         color: #979fb5;
         line-height: line-height-convert(30, 16);
         font-size: 16px;
+        @include respond(max-extra-small) {
+          font-size: 14px;
+        }
       }
     }
 
@@ -323,7 +326,7 @@
 
     &-description {
       width: 100%;
-      max-width: 400px;
+      max-width: 390px;
       padding-bottom: 42px;
       line-height: line-height-convert(20, 14);
       font-size: 14px;
