--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -2,7 +2,7 @@
   &-container {
     width: 100%;
     max-width: 500px;
-    height: 300px;
+    padding-bottom: 50px;
   }
 
   &-slide {
@@ -34,7 +34,7 @@
     &-next {
       width: 15px;
       height: 64px;
-      margin-top: -55px;
+      margin-top: 5%;
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
