--- a/src/pug/powercontrol.pug
+++ b/src/pug/powercontrol.pug
@@ -12,8 +12,8 @@ block content
     //- include ./components/pedalbox/_pedalbox
     //- include ./components/pedalbox/_working
     //- include ./components/pedalbox/_item
-    //- include ./components/pedalbox/_application
+    include ./components/pedalbox/_application
     //- include ./components/pedalbox/_details
     //- include ./components/pedalbox/_installation
-    //- include ./components/pedalbox/_certificates
-    //- include ./components/pedalbox/_reduced
+    include ./components/pedalbox/_certificates
+    include ./components/pedalbox/_reduced
