--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -9866,11 +9866,6 @@ section.section {
   }
 }
 
-/* line 150, src/scss/_components/pedalbox/_application.scss */
-.application__block ul li:nth-child(3), .application__block ul li:nth-child(4) {
-  margin-bottom: 0;
-}
-
 @media screen and (max-width: 1199px) {
   /* line 150, src/scss/_components/pedalbox/_application.scss */
   .application__block ul li:nth-child(3), .application__block ul li:nth-child(4) {
@@ -9879,51 +9874,51 @@ section.section {
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 158, src/scss/_components/pedalbox/_application.scss */
+  /* line 157, src/scss/_components/pedalbox/_application.scss */
   .application__block ul li:last-of-type {
     margin-bottom: 0;
   }
 }
 
-/* line 165, src/scss/_components/pedalbox/_application.scss */
+/* line 164, src/scss/_components/pedalbox/_application.scss */
 .application__block ul li > div:last-of-type {
   padding-right: 15px;
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 165, src/scss/_components/pedalbox/_application.scss */
+  /* line 164, src/scss/_components/pedalbox/_application.scss */
   .application__block ul li > div:last-of-type {
     padding-right: 0;
   }
 }
 
-/* line 173, src/scss/_components/pedalbox/_application.scss */
+/* line 172, src/scss/_components/pedalbox/_application.scss */
 .application__block ul li h3 {
   font-size: 18px;
 }
 
 @media screen and (min-width: 320px) {
-  /* line 173, src/scss/_components/pedalbox/_application.scss */
+  /* line 172, src/scss/_components/pedalbox/_application.scss */
   .application__block ul li h3 {
     font-size: calc(18px + 6 * (100vw - 320px) / 1120);
   }
 }
 
 @media screen and (min-width: 1440px) {
-  /* line 173, src/scss/_components/pedalbox/_application.scss */
+  /* line 172, src/scss/_components/pedalbox/_application.scss */
   .application__block ul li h3 {
     font-size: 24px;
   }
 }
 
-/* line 177, src/scss/_components/pedalbox/_application.scss */
+/* line 176, src/scss/_components/pedalbox/_application.scss */
 .application__block ul li p,
 .application__block ul li span {
   font-size: 14px;
 }
 
 @media screen and (min-width: 320px) {
-  /* line 177, src/scss/_components/pedalbox/_application.scss */
+  /* line 176, src/scss/_components/pedalbox/_application.scss */
   .application__block ul li p,
   .application__block ul li span {
     font-size: calc(14px + 2 * (100vw - 320px) / 1120);
@@ -9931,11 +9926,39 @@ section.section {
 }
 
 @media screen and (min-width: 1440px) {
-  /* line 177, src/scss/_components/pedalbox/_application.scss */
+  /* line 176, src/scss/_components/pedalbox/_application.scss */
   .application__block ul li p,
   .application__block ul li span {
     font-size: 16px;
   }
+}
+
+/* line 184, src/scss/_components/pedalbox/_application.scss */
+.application__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+/* line 188, src/scss/_components/pedalbox/_application.scss */
+.application__btn--ios {
+  margin-right: 15px;
+}
+
+/* line 192, src/scss/_components/pedalbox/_application.scss */
+.application__btn-wrapper {
+  z-index: 2;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-right: 65px;
 }
 
 /* line 3, src/scss/_components/pedalbox/_details.scss */
