--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -67,3 +67,8 @@
 @import "_components/pedalbox/installation";
 @import "_components/pedalbox/certificates";
 @import "_components/pedalbox/reduced";
+
+@import "_components/powercontrol/powercontrol";
+@import "_components/powercontrol/period";
+@import "_components/powercontrol/types";
+@import "_components/powercontrol/order";
